# mavsdk_drone_show

./: .gitignore  CHANGELOG.md  QUICKSCOUT_IMPLEMENTATION_PROMPT.md  README.md  actions.py  config.csv  config.json  config_sitl.json  coordinator.py  drone_show.py  led_indicator.py  process_formation.py  pyproject.toml  pytest.ini  quickscout_mission.py  requirements-gcs.txt  requirements.txt  smart_swarm.py  swarm.json  swarm_sitl.json  swarm_trajectory_mission.py
app/: linux_dashboard_start.sh
docs/: QUICKSCOUT_REVIEW_REPORT.md  README.md  TODO_deferred.md  configuration_architecture.md  control-modes-and-coordinates.md  quickscout.md
drone_show_src/: utils.py
functions/: __init__.py  file_management.py  file_utils.py  git_manager.py  swarm_analyzer.py  swarm_global_calculator.py  swarm_kml_generator.py  swarm_session_manager.py  swarm_trajectory_processor.py  swarm_trajectory_service.py  swarm_trajectory_utils.py
gcs-server/: __init__.py  app_fastapi.py  command.py  command_tracker.py  config.py  gcs_logging.py  git_status.py  heartbeat.py  log_background.py  log_proxy.py  log_routes.py  origin.py  request_logging.py  routes.py  schemas.py  start_gcs_server.sh  swarm_trajectory_routes.py  telemetry.py  utils.py
mds_logging/: __init__.py  cli.py  constants.py  drone.py  formatter.py  handlers.py  registry.py  schema.py  server.py  session.py  watcher.py
multiple_sitl/: calculate_spawn_coordinates.py  configure_px4_sitl_rcs.py  create_dockers.sh  detect_px4_mavlink_port.py  multiple_sitl.sh  set_sys_id.py  startup_sitl.sh
resources/: config_12docker.csv  (+15 more)
(+326 files in other folders)
