[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mavsdk-drone-show"
version = "1.0.0"
description = "MAVSDK Drone Show System"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "flask>=2.0.0",
    "pydantic>=2.0.0",
    "pyproj>=3.0.0",
    "numpy>=1.20.0",
    "scipy>=1.7.0",
    "requests>=2.25.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "functions*", "gcs-server*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.csv", "*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
